<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Audiolys</string>
    <string name="action_settings">Settings</string>
    <string name="image_desc">description</string>
    <string name="play_button">Play button</string>
    <string name="previous_button">Previous button</string>
    <string name="next_button">Next button</string>
    <string name="shuffle_button">Shuffle button</string>
    <string name="repeat_button">Repeat button</string>
    <string name="title">Title : </string>
    <string name="notitle">No title metadata</string>
    <string name="band">Band/singer : </string>
    <string name="noband">No band metadata</string>
    <string name="duration">Duration : </string>
    <string name="noduration">No duration metadata</string>
    
    <string name="year">Year : </string>
    <string name="noyear">No year metadata</string>
</resources>
