<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_margin="5dp"
	    android:orientation="horizontal"
        >
        
        <TextView
            android:id="@+id/labelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/title" />

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
        	android:layout_marginLeft="5dp"
            android:text="@string/notitle" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_margin="5dp"
	    android:orientation="horizontal"
        >
        
        <TextView
            android:id="@+id/labelBand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/band" />

        <TextView
            android:id="@+id/band"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:text="@string/noband" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
            android:textSize="18sp"
        android:layout_margin="5dp"
	    android:orientation="horizontal"
        >
        
        <TextView
            android:id="@+id/labelDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/duration" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:text="@string/noduration" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="5dp"
	    android:orientation="horizontal"
        >
        
        <TextView
            android:id="@+id/labelYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/year" />

        <TextView
            android:id="@+id/year"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:text="@string/noyear" />
        
    </LinearLayout>
    

</LinearLayout>
