<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewMusicName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textViewNumberTracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <SeekBar
            android:id="@+id/seekBarAudio"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="35dp"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewMusicCurrentPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/textViewMusicTotalDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/repeat_button"
            android:background="@drawable/selector_repeat_button" />

        <ImageView
            android:id="@+id/imageViewPreviousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous_button" />

        <!--
              <ImageView
            android:id="@+id/imageViewPlayButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:background="@drawable/selector_play_button"
            android:contentDescription="@string/play_button" />
        -->

        <ImageView
            android:id="@+id/imageViewPlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_play_button"
            android:contentDescription="@string/play_button" />

        <ImageView
            android:id="@+id/imageViewNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_button" />

        <ImageView
            android:id="@+id/imageViewShuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shuffle_button"
            android:background="@drawable/selector_shuffle_button"/>
    </LinearLayout>

</LinearLayout>